--- a/react/src/components/homepage/About.sass
+++ b/react/src/components/homepage/About.sass
@@ -4,53 +4,84 @@ $colorContent: #627A86
 $colorTitle: #00273C
 
 .about
-    position: relative
     // font-family: 'Noto Serif TC', serif
     padding-top: 3rem
+    .about-content
+        width: 1140px
+        position: relative
+        margin: 0 auto
+        height: 800px
     .home-title
+        width: 100%
+        display: flex
+        justify-content: center
+        margin: 3rem 0
+
         img
             //position: absolute
-            left: 20%
-.leaf img
-    width: 20%
-    top: 30%
-.recicle
+            // left: 50%
+.leaf
+    border-radius: 0 0 15% 0
+    overflow: hidden
+    width: 600px
+    height: 300px
     position: absolute
-    left: 50%
-    top: 5%
-    right: 10%
     img
-        width: 88%
+        // position: absolute
+        width: 600px
+.dots
+    position: absolute
+    right: 0
+    width: 360px
+    h3
+        font-size: 24px
+        line-height: 50px
+        color: #0D5C3F
+        padding-top: 2rem
+    img
+        width: 100%
+        margin-right: -30%
+        margin-top: -4rem
+.recycle
+    position: absolute
+    // left: 70%
+    top: 60%
+    right: 0
+    img
+        width: 360px
+
+.content
+    position: absolute
+    // left: 20%
+    margin-top: 2rem
+    top: 60%
+    width: 600px
+    h5
+        color: #0D5C3F
+        font-size: 20px
+        padding-bottom: 0.2rem
+        padding-top: 0.2rem
+    h3
+        color: #0D5C3F
+        font-weight: 500
+        font-size: 20px
+        padding-bottom: 0.2rem
+        // border-bottom: 1px solid #00273C
+    p
+        font-weight: 400
+        font-size: 16px
+        // width: 400px
+        color: #302f2fd8
+        line-height: 35px
+        // padding-top: 0.2rem
 .icon
-    margin-top: 10rem
-    background-color: $colorLightgreen
-    height: 16vh
-    width: 100%
+    margin-top: 1rem
+    // background-color: $colorLightgreen
+    // height: 16vh
+    // width: 100%
     display: flex
     align-items: center
     justify-content: center
     img
-        height: 12vh
+        height: 100px
         margin: 0 3rem
-.content
-    position: absolute
-    left: 20%
-    margin-top: -14rem
-    top: 70%
-    h5
-        color: $colorMaimgreen
-        font-size: 24px
-        padding-bottom: 0.2rem
-    h3
-        color: #302f2fd8
-        font-weight: 500
-        font-size: 32px
-        padding-bottom: 0.2rem
-        border-bottom: 1px solid #00273C
-    p
-        font-weight: 300
-        font-size: 18px
-        width: 400px
-        color: #302f2fd8
-        line-height: 30px
-        padding-top: 0.2rem
