--- a/react/src/components/homepage/Activity.sass
+++ b/react/src/components/homepage/Activity.sass
@@ -9,7 +9,6 @@ $colorGreen: #95C375
     padding-top: 100px
     // background-image: linear-gradient(to bottom,white,$colorLightgreen)
     font-family: 'Noto Serif TC', serif
-    position: relative
     height: 900px
 
     .leaf2
@@ -17,24 +16,21 @@ $colorGreen: #95C375
             width: 30%
             position: absolute
             right: 0
-.home-title
+.home-activity .home-title
     img
-        margin-left: 5rem
+        margin-left: 8rem
 
 .activity-content
-    // display: flex
-    // flex-wrap: wrap
-    // justify-content: flex-start
-    // align-items: center
-    // margin: 6rem 0 4rem 0
-    // padding: 0 5rem
-    // position: relative
+    width: 1140px
+    position: relative
+    margin: 1rem auto
+    height: 400px
     .photo2
         position: absolute
         z-index: 1
-        top: 33%
-        right: 20%
-        width: 500px
+        // top: 33%
+        right: 0
+        width: 600px
         height: 500px
         overflow: hidden
         img
@@ -43,28 +39,24 @@ $colorGreen: #95C375
             // z-index: 1
             // right: 0
     .home-photo
-        width: 490px
-        // height: 324px
+        width: 400px
         overflow: hidden
-        // box-shadow: -20px 20px 0px 0px $colorGreen
-        // margin: 3rem 2rem
         border-radius: 0
         position: absolute
         z-index: 2
-        top: 30%
-        left: 20%
+        left: 0
         img
-            width: 475px
+            width: 100%
 
     .home-card
         background-color: #ffffff
-        height: 300px
+        width: 400px
         text-align: left
         margin: 0
         position: absolute
         z-index: 3
-        top: 60%
-        left: 20%
+        top: 70%
+        left: 0
         border-top: 1px solid $colorGreen
         padding-top: 1rem
         h6
@@ -83,44 +75,8 @@ $colorGreen: #95C375
             color: $colorContent
             background-color: #ffffff
 
-.activity-content-right
-    display: flex
-    flex-wrap: wrap
-    justify-content: flex-end
-    align-items: center
-
-    .photo2
-        width: 500px
-        height: 400px
-        overflow: hidden
-        box-shadow: -30px 30px 0px 0px $colorGreen
-        // margin: 3rem
-        position: relative
-        img
-            height: 100%
-
-    .home-card
-        background-color: #ffffff00
-        text-align: left
-        font-family: 'Noto Serif TC', serif
-        margin: 0
-        h6
-            font-weight: 600
-            font-size: 16px
-            color: $colorTitle
-        h3
-            font-weight: 600
-            font-size: 26px
-            color: $colorTitle
-        p
-            font-weight: 400
-            font-size: 18px
-            color: $colorContent
 .home-article
     width: 100%
-    //height: 800px
-    //padding-top: 100px
-    // background-color: $colorLightgreen
     h3
         font-size: 20px
         color: $colorTitle
@@ -152,3 +108,5 @@ $colorGreen: #95C375
             width: 350px
         .preview
             //text-align: center
+.home-article .home-title
+    margin: 0 8rem
