--- a/react/src/components/homepage/Product.sass
+++ b/react/src/components/homepage/Product.sass
@@ -19,11 +19,10 @@ $colorButton: #95C375
     width: 100%
     height: 300px
     border: none
-    display: flex
+    // display: flex
     justify-items: center
     align-items: center
     text-align: center
-    font-family: 'Noto Serif TC', serif
 
     h5
         font-size: 20px
@@ -33,3 +32,5 @@ $colorButton: #95C375
         font-size: 20px
     img
         width: 100%
+.homepageCard:hover
+    opacity: .5
