--- a/react/src/styles/cart/cart.css
+++ b/react/src/styles/cart/cart.css
@@ -1,10 +1,10 @@
 /* class */
 /* html {
-  font-size: 14pt !important;
+  font-size: 14pt ;
 } */
 body {
-  margin: 0 !important;
-  padding: 0 !important;
+  margin: 0;
+  padding: 0;
 }
 /* header {
   position: relative;
@@ -30,118 +30,118 @@ input.cart-input {
   max-width: 1170pxt;
 }
 .step-wrap {
-  width: 540px !important;
-  height: 81px !important;
-  margin: 50px auto !important;
+  width: 540px;
+  height: 81px;
+  margin: 50px auto;
 }
 .step-wrap img {
-  width: 100% !important;
-  height: 100% !important;
+  width: 100%;
+  height: 100%;
 }
 .cart-title {
-  padding-left: 30px !important;
+  padding-left: 30px;
 }
 .cart {
   border: 2px solid #ddead7;
-  margin-bottom: 50px !important;
+  margin-bottom: 50px;
 }
 .cart-item {
-  width: 100% !important;
+  width: 100%;
 }
 .cart table {
-  width: 100% !important;
-  text-align: start !important;
+  width: 100%;
+  text-align: start;
 }
 .cart table tr {
   border-bottom: 5px solid #71a757;
 }
 .cart-item table th {
-  padding: 15px 30px !important;
+  padding: 15px 30px;
 }
 .cart table td {
-  padding: 15px 30px !important;
+  padding: 15px 30px;
 }
 .cart-item table img {
-  width: 100px !important;
-  height: 100px !important;
+  width: 100px;
+  height: 100px;
 }
 .amount {
-  white-space: nowrap !important;
+  white-space: nowrap;
 }
 .amount .cart-icon {
-  width: 25px !important;
-  height: 25px !important;
+  width: 25px;
+  height: 25px;
 }
 .amount .cart-icon:hover {
-  cursor: pointer !important;
+  cursor: pointer;
 }
 .amount-box {
-  display: inline-block !important;
-  height: 25px !important;
-  width: 100px !important;
+  display: inline-block;
+  height: 25px;
+  width: 100px;
   border: 1px solid #ddead7;
-  text-align: center !important;
-  line-height: 25px !important;
+  text-align: center;
+  line-height: 25px;
 }
 .table-text {
-  border: 0 solid transparent !important;
-  font-size: 12pt !important;
-  white-space: nowrap !important;
+  border: 0 solid transparent;
+  font-size: 12pt;
+  white-space: nowrap;
 }
 .discount-box {
-  display: inline-block !important;
-  height: 25px !important;
-  width: 150px !important;
+  display: inline-block;
+  height: 25px;
+  width: 150px;
   background-color: #ddead7;
-  margin: 5px 0 !important;
-  text-align: center !important;
-  justify-content: center !important;
+  margin: 5px 0;
+  text-align: center;
+  justify-content: center;
 }
 .col-8 {
-  padding-left: 0 !important;
+  padding-left: 0;
 }
 .col-4 {
-  padding-right: 0 !important;
+  padding-right: 0;
 }
 .col-7 {
-  padding-left: 0 !important;
+  padding-left: 0;
 }
 .col-5 {
-  padding-right: 0 !important;
+  padding-right: 0;
 }
 .table-title {
-  margin-top: 5px !important;
-  padding-left: 30px !important;
+  margin-top: 5px;
+  padding-left: 30px;
 }
 .inner {
-  width: 100% !important;
-  margin: 30px !important;
-  padding-bottom: 15px !important;
-  padding-right: 60px !important;
-  text-align: start !important;
+  width: 100%;
+  margin: 30px;
+  padding-bottom: 15px;
+  padding-right: 60px;
+  text-align: start;
 }
 .radio-wrap {
-  width: 100% !important;
-  height: 40px !important;
-  margin: 10px 0 !important;
+  width: 100%;
+  height: 40px;
+  margin: 10px 0;
   border: 2px solid #e7e4dc;
   font-weight: 500;
 }
 .radio-wrap input {
-  margin: 0 20px !important;
+  margin: 0 20px;
 }
 .radio-wrap label {
-  margin-bottom: 0 !important;
+  margin-bottom: 0;
 }
 .store-location {
-  width: 100px !important;
-  height: 30px !important;
-  line-height: 0px !important;
-  margin: 0 20px !important;
-  text-align: center !important;
+  width: 100px;
+  height: 30px;
+  line-height: 0px;
+  margin: 0 20px;
+  text-align: center;
 }
 .store-location:hover {
-  cursor: pointer !important;
+  cursor: pointer;
   background-color: #71a757;
 }
 .btn.cart-btn {
@@ -153,30 +153,30 @@ input.cart-input {
 }
 .cart-list {
   border: 5px solid #a8d182;
-  text-align: center !important;
+  text-align: center;
 }
 .total-wrap {
-  font-size: 18pt !important;
+  font-size: 18pt;
 }
 .cart-dropdown {
-  font-size: 14pt !important;
+  font-size: 14pt;
 }
 .credit-num {
-  width: 15% !important;
+  width: 15%;
 }
 .credit-name {
-  width: 40% !important;
+  width: 40%;
 }
 textarea {
-  width: 100% !important;
-  resize: none !important;
+  width: 100%;
+  resize: none;
 }
 .del-btn {
-  width: 75px !important;
-  height: 40px !important;
+  width: 75px;
+  height: 40px;
 }
 .order-list {
-  width: 60% !important;
+  width: 60%;
   border: 2px solid #ddead7;
 }
 
@@ -189,26 +189,26 @@ textarea {
 
 /* id */
 #cart-dropdown-arrow {
-  width: 15px !important;
-  height: 15px !important;
-  transition: 0.3s !important;
+  width: 15px;
+  height: 15px;
+  transition: 0.3s;
 }
 #cart-dropdown-arrow:hover {
-  cursor: pointer !important;
+  cursor: pointer;
 }
 #order-name {
-  width: 20% !important;
+  width: 20%;
 }
 
 #order-city {
-  width: 15% !important;
+  width: 15%;
 }
 #order-dist {
-  width: 15% !important;
+  width: 15%;
 }
 #order-port {
-  width: 10% !important;
+  width: 10%;
 }
 #order-addr {
-  width: 60% !important;
+  width: 60%;
 }
