--- a/react/src/list.css
+++ b/react/src/list.css
@@ -101,11 +101,15 @@
 li {
   list-style: none;
 }
+.product-recommend-article-area {
+  width: 80%;
+  line-height: 32px;
+}
 .product-recommend-article a {
-  font-size: 16px;
+  font-size: 14px;
   padding: 20px 0;
   text-decoration: none;
-  color: #525050;
+  color: #3333339d;
 }
 .link:hover {
   color: #95c375;
@@ -138,9 +142,16 @@ li {
 .product-detail-Introduction {
   width: 50%;
   padding: 3rem;
-  position: fixed;
+  position: absolute;
   right: 0;
-  top: 100px;
+  top: 2000px;
+}
+.fix {
+  position: fixed;
+  top: 80px;
+  width: 50%;
+  padding: 3rem;
+  right: 0;
 }
 .product-detail-Introduction p {
   font-size: 16px;
