--- a/react/src/shop_list.css
+++ b/react/src/shop_list.css
@@ -61,7 +61,8 @@ header ul li:last-child {
 .shop_list-search input,
 .shop_list-search select {
   border: 2px solid #a8d182;
-  margin: 5px;
+  margin: 1rem;
+  height: 28px;
 }
 
 .shop_list-product {
@@ -108,6 +109,7 @@ header ul li:last-child {
   margin-top: 15px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 .shop_list-cart button {
   background-color: #a8d182;
@@ -149,7 +151,7 @@ header ul li:last-child {
   position: relative;
 }
 .shop_list_top_pro {
-  height: 400px;
+  /* height: 400px; */
   position: relative;
 }
 .shop_list_top_pro .fav {
@@ -159,15 +161,13 @@ header ul li:last-child {
   top: 5px;
 }
 .shop_list_top_pro img {
-  height: 300px;
+  height: 400px;
   width: 100%;
   object-fit: cover;
 }
 .shop_list-title {
-  line-height: 50px;
-  overflow: hidden;
-  max-width: 350px;
-  height: 50px;
   font-size: 16px;
-  text-align: center;
+  text-align: left;
+  padding: 0.5rem 0 0;
+  margin: 0;
 }
