--- a/react/src/styles/cart/cart.css
+++ b/react/src/styles/cart/cart.css
@@ -193,10 +193,10 @@ textarea {
   width: 100%;
   resize: none;
 }
-.del-btn {
+/* .del-btn {
   width: 75px;
   height: 40px;
-}
+} */
 .order-list {
   width: 60%;
   border: 2px solid #ddead7;
