--- a/react/src/components/homepage/C.sass
+++ b/react/src/components/homepage/C.sass
@@ -4,11 +4,15 @@ $colorContent: #627A86
 $colorTitle: #00273C
 
 .banner
-    width: 1440px
-    height: 700px
+    margin-top: 100px
+    width: 100%
+    height: 720px
     overflow: hidden
+    position: relative
     img
-        width: 100%
-        // position: absolute
+        // width: 100%
+        position: absolute
+        top: 1rem
         // bottom: 5px
-        // object-fit: contain
+        // height: 700px
+        object-fit: contain
